letsencrypt.yaml
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt
spec:
  selector:
    app: letsencrypt
  ports: 
  - protocol: TCP
    port: 80
  type: NodePort
