nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
        path: /
        port: 80
    volumeMounts:
    - name: nginx-configs
      mountPath: /etc/nginx/conf.d
  volumes:
  - name: nginx-configs
    configMap:
      name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports: 
  - protocol: TCP
    port: 80
  type: NodePort
