sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  labels: 
    app: sonarqube
spec:
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:latest
        args: ["-Dsonar.web.context=/sonarqube"]
        ports:
        - containerPort: 9000
        readinessProbe:
          httpGet:
            path: /sonarqube/
            port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  selector:
    app: sonarqube
  ports: 
  - protocol: TCP
    port: 9000
  type: NodePort
