ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /certbot
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /certbot/*
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /jenkins
        backend:
          serviceName: jenkins
          servicePort: 8080
      - path: /jenkins/*
        backend:
          serviceName: jenkins
          servicePort: 8080
      - path: /sonarqube
        backend:
          serviceName: sonarqube
          servicePort: 9000
      - path: /sonarqube/*
        backend:
          serviceName: sonarqube
          servicePort: 9000
